fixed top header alignment

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -183,7 +183,6 @@
   font-family: var(--font-poppins);
   color: var(--light-font-color);
   font-weight: 500;
-  margin-bottom: 10px;
 }
 
 .signIn {
